(executable
 (name Main)
 (modules
  (:standard \ PesyExampleSrcPesyModules))
 (public_name Main.exe)
 (libraries pesy-example.src.pesy-modules)
 (flags -open PesyExampleSrcPesyModules))

(library
 (public_name pesy-example.src.pesy-modules)
 (name PesyExampleSrcPesyModules)
 (modules PesyExampleSrcPesyModules)
 (libraries console.lib pesy-example.my-own-lib))

(rule
 (with-stdout-to
  PesyExampleSrcPesyModules.re
  (run
   echo
   "module FooConsole = Console;\nmodule MyOwnLibrary = PesyExampleMyOwnLib.Index;")))
